更新 package.json 檔案，修改作者資訊為 icewaternotice

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "keyword3"
   ],
   "author": {
-    "name": "Unity",
-    "email": "unity@example.com",
-    "url": "https://www.unity3d.com"
+    "name": "icewaternotice",
+    "email": "icewaternotice@gmail.com",
+    "url": "https://www.icewaternotice.com"
   }
 }
 
