刪除 ExampleScene1.unity 和 ExampleScene1.unity.meta 檔案，並新增完整的 ExampleScene1.unity 和 ExampleScene1.unity.meta 檔案以建立範例場景，更新 package.json 檔案以包含範例資訊

--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   "documentationUrl": "https://example.com/",
   "changelogUrl": "https://example.com/changelog.html",
   "licensesUrl": "https://example.com/licensing.html",
-  "dependencies": {
- },
- "keywords": [
+  "dependencies": {},
+  "keywords": [
     "keyword1",
     "keyword2",
     "keyword3"
@@ -19,6 +18,12 @@
     "name": "icewaternotice",
     "email": "icewaternotice@gmail.com",
     "url": "https://www.icewaternotice.com"
-  }
+  },
+  "samples": [
+    {
+      "displayName": "Example Sample",
+      "description": "Basic usage example",
+      "path": "Samples/ExampleScene1"
+    }
+  ]
 }
-
